add dockerfile & docker-compose file and tests
