# docs/swagger.yaml
@@ -3,36 +3,24 @@ definitions:
     type: object
   internal_delivery_http_task.CreateResponse:
     properties:
-      error:
-        type: string
-      status:
-        type: string
       task_id:
         type: string
     type: object
   internal_delivery_http_task.GetResultResponse:
     properties:
-      error:
-        type: string
       result:
-        type: string
-      status:
         type: string
     type: object
   internal_delivery_http_task.GetStatusResponse:
     properties:
-      error:
-        type: string
       status:
-        type: string
-      task_status:
         $ref: '#/definitions/media-processing-platform_internal_domain.TaskStatus'
     type: object
   media-processing-platform_internal_delivery_http_shared.Response:
     properties:
       error:
         type: string
-      status:
+      response_status:
         type: string
     type: object
   media-processing-platform_internal_domain.TaskStatus:
@@ -46,37 +34,7 @@ definitions:
 info:
   contact: {}
 paths:
-  /api/tasks/:
-    post:
-      consumes:
-      - application/json
-      description: Creates a new media processing task
-      parameters:
-      - description: Task creation request
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/internal_delivery_http_task.CreateRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/internal_delivery_http_task.CreateResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/media-processing-platform_internal_delivery_http_shared.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/media-processing-platform_internal_delivery_http_shared.Response'
-      summary: Create task
-      tags:
-      - tasks
-  /api/tasks/result/{task_id}/:
+  /result/{task_id}:
     get:
       description: Returns the processing result of a task by its ID
       parameters:
@@ -104,7 +62,7 @@ paths:
       summary: Get task result
       tags:
       - tasks
-  /api/tasks/status/{task_id}/:
+  /status/{task_id}:
     get:
       description: Returns the current processing status of a task by its ID
       parameters:
@@ -130,6 +88,36 @@ paths:
           schema:
             $ref: '#/definitions/media-processing-platform_internal_delivery_http_shared.Response'
       summary: Get task status
+      tags:
+      - tasks
+  /task:
+    post:
+      consumes:
+      - application/json
+      description: Creates a new media processing task
+      parameters:
+      - description: Task creation request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/internal_delivery_http_task.CreateRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/internal_delivery_http_task.CreateResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/media-processing-platform_internal_delivery_http_shared.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/media-processing-platform_internal_delivery_http_shared.Response'
+      summary: Create task
       tags:
       - tasks
 swagger: "2.0"
