# internal/delivery/http/task/get_result_handler.go
@@ -1,6 +1,8 @@
 package task
 
 import (
+	"errors"
+	"gorm.io/gorm"
 	"log/slog"
 	"net/http"
 
@@ -20,7 +22,7 @@ import (
 // @Success 200 {object} GetResultResponse
 // @Failure 400 {object} resp.Response
 // @Failure 500 {object} resp.Response
-// @Router /api/tasks/result/{task_id}/ [get]
+// @Router /result/{task_id} [get]
 func NewGetResultHandler(log *slog.Logger, taskRepository repository.Task, validate *validator.Validate) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		id, ok := resp.BindPathUUID(w, r, log, "task_id")
@@ -30,10 +32,16 @@ func NewGetResultHandler(log *slog.Logger, taskRepository repository.Task, valid
 
 		result, err := taskRepository.GetTaskResultByID(id)
 		if err != nil {
+			if errors.Is(err, gorm.ErrRecordNotFound) {
+				render.Status(r, http.StatusNotFound)
+				render.JSON(w, r, resp.Error("task not found"))
+				return
+			}
+
 			log.Error("failed to get task result", "error", err)
 
+			render.Status(r, http.StatusInternalServerError)
 			render.JSON(w, r, resp.Error("failed to get task result"))
-
 			return
 		}
 
@@ -45,6 +53,5 @@ func NewGetResultHandler(log *slog.Logger, taskRepository repository.Task, valid
 func getResultRespondOK(w http.ResponseWriter, r *http.Request, result string) {
 	render.JSON(w, r, GetResultResponse{
 		Result:   result,
-		Response: resp.Success(),
 	})
 }
