# internal/delivery/http/task/responses.go
@@ -1,7 +1,6 @@
 package task
 
 import (
-	resp "media-processing-platform/internal/delivery/http/shared"
 	"media-processing-platform/internal/domain"
 
 	"github.com/google/uuid"
@@ -9,15 +8,12 @@ import (
 
 type CreateResponse struct {
 	ID     uuid.UUID `json:"task_id"`
-	resp.Response
 }
 
 type GetStatusResponse struct {
-	TaskStatus domain.TaskStatus `json:"task_status"`
-	resp.Response
+	TaskStatus domain.TaskStatus `json:"status"`
 }
 
 type GetResultResponse struct {
 	Result string    `json:"result"`
-	resp.Response
 }
